fix(speakers' names and links): vertical alignment

--- a/css/_speakers.scss
+++ b/css/_speakers.scss
@@ -32,7 +32,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 3rem;
+  column-gap: 0.125rem;
+  row-gap: 3rem;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -59,7 +60,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 220px;
+  width: 16.375rem;
   margin-bottom: 2rem;
   @media (max-width: 600px) {
     margin-bottom: 0;
@@ -87,7 +88,7 @@
 }
 
 .speaker-avatar {
-  width: 90%;
+  width: 12.625rem;
   border-radius: 50%;
   border: 1rem solid #fff;
   overflow: hidden;
